--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "@eslint/js": "^9.32.0",
     "eslint": "^9.32.0",
     "globals": "^16.3.0"
+  },
+  "dependencies": {
+    "newrelic": "^13.0.0"
   }
 }
